--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -67,6 +67,8 @@
                     <div class="zone-item" data-zone="north">
                         <h4>North Zone</h4>
                         <div class="zone-stats">
+                            <!-- הערה חדשה: הוספת אלמנט להצגת סך ההזמנות -->
+                            <span>Total: <span class="zone-total">0</span></span>
                             <span>Waiting: <span class="zone-waiting">0</span></span>
                             <span>Active: <span class="zone-active">0</span></span>
                             <span>Delivered: <span class="zone-delivered">0</span></span>
@@ -75,6 +77,8 @@
                     <div class="zone-item" data-zone="center">
                         <h4>Center Zone</h4>
                         <div class="zone-stats">
+                            <!-- הערה חדשה: הוספת אלמנט להצגת סך ההזמנות -->
+                            <span>Total: <span class="zone-total">0</span></span>
                             <span>Waiting: <span class="zone-waiting">0</span></span>
                             <span>Active: <span class="zone-active">0</span></span>
                             <span>Delivered: <span class="zone-delivered">0</span></span>
@@ -83,6 +87,8 @@
                     <div class="zone-item" data-zone="south">
                         <h4>South Zone</h4>
                         <div class="zone-stats">
+                            <!-- הערה חדשה: הוספת אלמנט להצגת סך ההזמנות -->
+                            <span>Total: <span class="zone-total">0</span></span>
                             <span>Waiting: <span class="zone-waiting">0</span></span>
                             <span>Active: <span class="zone-active">0</span></span>
                             <span>Delivered: <span class="zone-delivered">0</span></span>
