--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -54,9 +54,9 @@
                     <div class="form-group">
                         <label for="numCouriers">Number of Couriers:</label>
                         <input type="number" id="numCouriers" name="numCouriers"
-                               min="1" max="50" value="4" required>
-                        <small>Total number of couriers in the system (1-50)</small>
-                    </div>
+                               min="1" max="200" value="4" required>
+                        <small>Total number of couriers in the system (1-200)</small>
+                        </div>
 
                     <div class="form-group">
                         <label for="orderInterval">Order Generation Interval (seconds):</label>
@@ -85,10 +85,10 @@
                         <input type="checkbox" id="enableMapView" name="enableMapView">
                         <label for="enableMapView">
                             Enable Map Visualization 
-                            <span class="map-info">(Limited to 100 homes for performance, enables real-time courier tracking)</span>
-                        </label>
+                            <span class="map-info">(Up to 200 homes, enables real-time courier tracking)</span>
+                            </label>
                         <small class="map-note">
-                            <strong>With map:</strong> 100 homes + 3 businesses, visual tracking, route-based travel times<br>
+                            <strong>With map:</strong> 200 homes + 3 businesses, visual tracking, route-based travel times<br>
                             <strong>Without map:</strong> 2000 virtual homes, random travel times
                         </small>
                     </div>
@@ -132,11 +132,10 @@
                 </section>
             </section>
 
-            <!-- פאנל המפה החדש -->
             <section id="mapPanel" class="map-panel" style="display: none;">
                 <h2>Real-Time Map View</h2>
                 <div class="map-container">
-                    <canvas id="mapCanvas" width="1000" height="1000"></canvas>
+                    <canvas id="mapCanvas" width="1500" height="1500"></canvas>
                     <div class="map-legend">
                         <h4>Legend</h4>
                         <div class="legend-item">
