--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -43,26 +43,21 @@
                 <form id="configForm" class="config-form">
                     <div class="zones-info">
                         <h3>Delivery Zones</h3>
-                        <p>The simulation operates with 3 fixed zones:</p>
-                        <ul class="zones-list">
-                            <li><strong>North Zone</strong> - Northern delivery area</li>
-                            <li><strong>Center Zone</strong> - Central delivery area</li>
-                            <li><strong>South Zone</strong> - Southern delivery area</li>
-                        </ul>
+                        <p>The simulation operates with 3 fixed zones: North, Center, and South.</p>
                     </div>
 
                     <div class="form-group">
                         <label for="numCouriers">Number of Couriers:</label>
                         <input type="number" id="numCouriers" name="numCouriers"
-                               min="1" max="200" value="4" required>
-                        <small>Total number of couriers in the system (1-200)</small>
-                        </div>
+                               min="1" max="200" value="8" required>
+                        <small>Total number of couriers in the system (1-200).</small>
+                    </div>
 
                     <div class="form-group">
                         <label for="orderInterval">Order Generation Interval (seconds):</label>
                         <input type="number" id="orderInterval" name="orderInterval"
                                min="1" max="300" value="5" required>
-                        <small>Time between new orders (1-300 seconds)</small>
+                        <small>Time between new orders (1-300 seconds).</small>
                     </div>
 
                     <div class="form-row">
@@ -70,27 +65,31 @@
                             <label for="minTravelTime">Min Travel Time (seconds):</label>
                             <input type="number" id="minTravelTime" name="minTravelTime"
                                    min="5" max="300" value="14" required>
-                            <small>Minimum courier travel time</small>
+                            <small>Minimum courier travel time (used if map is disabled).</small>
                         </div>
 
                         <div class="form-group half">
                             <label for="maxTravelTime">Max Travel Time (seconds):</label>
                             <input type="number" id="maxTravelTime" name="maxTravelTime"
                                    min="10" max="600" value="40" required>
-                            <small>Maximum courier travel time</small>
+                            <small>Maximum courier travel time (used if map is disabled).</small>
                         </div>
                     </div>
 
+                    <!-- הערה חדשה: החזרת ה-checkbox לבחירת מצב מפה -->
                     <div class="form-group map-option">
-                        <input type="checkbox" id="enableMapView" name="enableMapView">
+                        <input type="checkbox" id="enableMapView" name="enableMapView" checked>
                         <label for="enableMapView">
-                            Enable Map Visualization 
-                            <span class="map-info">(Up to 200 homes, enables real-time courier tracking)</span>
-                            </label>
-                        <small class="map-note">
-                            <strong>With map:</strong> 200 homes + 3 businesses, visual tracking, route-based travel times<br>
-                            <strong>Without map:</strong> 2000 virtual homes, random travel times
-                        </small>
+                            Enable Map Visualization
+                        </label>
+                    </div>
+
+                    <!-- הערה חדשה: שדה מספר הבתים שמוצג באופן תלוי -->
+                    <div id="numHomesContainer" class="form-group">
+                        <label for="numHomes">Number of Homes:</label>
+                        <input type="number" id="numHomes" name="numHomes"
+                               min="100" max="2000" value="200" required>
+                        <small>Total number of homes on the map (100-2000).</small>
                     </div>
                 </form>
 
@@ -171,7 +170,7 @@
             </div>
 
             <div id="configFooter" class="config-footer">
-                <p>Logistics Simulator v2.0 - Configure and run your custom simulation</p>
+                <p>Logistics Simulator v2.2 - Configure and run your custom simulation</p>
             </div>
         </footer>
     </div>
